Correcting text align

--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -54,5 +54,5 @@ a {
 }
 
 .section-header {
-	align-items: var(--section-header-align);
+	text-align: var(--section-header-align);
 }
